Add app code for wheel speed sensors
wip

Update dbc

wip

wip

--- a/boards/FSM/FSM.ioc
+++ b/boards/FSM/FSM.ioc
@@ -326,9 +326,13 @@ SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Input_Capture2_from_TI2
 SH.S_TIM4_CH2.ConfNb=1
 TIM16.Channel=TIM_CHANNEL_1
-TIM16.IPParameters=Channel
+TIM16.IPParameters=Channel,Prescaler,Period
+TIM16.Period=TIM16_AUTO_RELOAD_REG
+TIM16.Prescaler=TIM16_PRESCALER
 TIM17.Channel=TIM_CHANNEL_1
-TIM17.IPParameters=Channel
+TIM17.IPParameters=Channel,Prescaler,Period
+TIM17.Period=TIM17_AUTO_RELOAD_REG
+TIM17.Prescaler=TIM17_PRESCALER
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-Input_Capture2_from_TI2,Period,Prescaler,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger
