--- a/boards/FSM/FSM.ioc
+++ b/boards/FSM/FSM.ioc
@@ -1,12 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,SubFamily
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion
+ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
-ADC2.Offset-0\#ChannelRegularConversion=0
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SubFamily=STM32F302xC
+ADC2.Offset-1\#ChannelRegularConversion=0
+ADC2.Offset-2\#ChannelRegularConversion=0
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.Rank-2\#ChannelRegularConversion=2
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
 CAN.ABOM=ENABLE
 CAN.AWUM=DISABLE
 CAN.BS1=CAN_BS1_6TQ
@@ -107,19 +112,20 @@ Mcu.Pin22=PB5
 Mcu.Pin23=PB6
 Mcu.Pin24=PB8
 Mcu.Pin25=PB9
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin27=VP_IWDG_VS_IWDG
-Mcu.Pin28=VP_SYS_VS_tim6
-Mcu.Pin29=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin26=VP_ADC2_Vref_Input
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin28=VP_IWDG_VS_IWDG
+Mcu.Pin29=VP_SYS_VS_tim6
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin30=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=IWDG_WINDOW_DISABLE_VALUE,4095;IWDG_PRESCALER,4;IWDG_RESET_FREQUENCY,5;LSI_FREQUENCY,40000;TASK1HZ_STACK_SIZE,128;TASK1KHZ_STACK_SIZE,128;TASKCANRX_STACK_SIZE,128;TASKCANTX_STACK_SIZE,128;TIM4_AUTO_RELOAD_REG,0xFFFF;TIMx_FREQUENCY,72000000;TIM4_PWM_MINIMUM_FREQUENCY,1;TIM4_PRESCALER,(TIMx_FREQUENCY / TIM4_AUTO_RELOAD_REG / TIM4_PWM_MINIMUM_FREQUENCY);TIM16_AUTO_RELOAD_REG,0xFFFF;TIM17_AUTO_RELOAD_REG,0xFFFF;TIM16_PWM_MINIMUM_FREQUENCY,1;TIM17_PWM_MINIMUM_FREQUENCY,1;TIM16_PRESCALER,(TIMx_FREQUENCY / TIM16_AUTO_RELOAD_REG / TIM16_PWM_MINIMUM_FREQUENCY);TIM17_PRESCALER,(TIMx_FREQUENCY / TIM17_AUTO_RELOAD_REG / TIM17_PWM_MINIMUM_FREQUENCY)
 Mcu.UserName=STM32F302CCTx
@@ -342,6 +348,8 @@ TIM4.IPParameters=Channel-Input_Capture2_from_TI2,Period,Prescaler,Channel-Input
 TIM4.Period=TIM4_AUTO_RELOAD_REG
 TIM4.Prescaler=TIM4_PRESCALER
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+VP_ADC2_Vref_Input.Mode=IN-Vrefint
+VP_ADC2_Vref_Input.Signal=ADC2_Vref_Input
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
