Add shared adc Io code
Debug ADC configuration

wip

wip

wip

wip

steering angle wip

--- a/boards/FSM/FSM.ioc
+++ b/boards/FSM/FSM.ioc
@@ -1,17 +1,26 @@
 #MicroXplorer Configuration settings - do not modify
-ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion
-ADC2.NbrOfConversion=2
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC2.Channel-18\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-19\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC2.ContinuousConvMode=ENABLE
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,Overrun,DMAContinuousRequests,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion,OffsetNumber-18\#ChannelRegularConversion,Offset-18\#ChannelRegularConversion,Rank-19\#ChannelRegularConversion,Channel-19\#ChannelRegularConversion,SamplingTime-19\#ChannelRegularConversion,OffsetNumber-19\#ChannelRegularConversion,Offset-19\#ChannelRegularConversion,SubFamily
+ADC2.NbrOfConversion=3
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-1\#ChannelRegularConversion=0
-ADC2.Offset-2\#ChannelRegularConversion=0
+ADC2.Offset-18\#ChannelRegularConversion=0
+ADC2.Offset-19\#ChannelRegularConversion=0
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-18\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-19\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Overrun=ADC_OVR_DATA_PRESERVED
 ADC2.Rank-1\#ChannelRegularConversion=1
-ADC2.Rank-2\#ChannelRegularConversion=2
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC2.Rank-18\#ChannelRegularConversion=2
+ADC2.Rank-19\#ChannelRegularConversion=3
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SamplingTime-18\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SamplingTime-19\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SubFamily=STM32F302xC
 CAN.ABOM=ENABLE
 CAN.AWUM=DISABLE
 CAN.BS1=CAN_BS1_6TQ
@@ -25,6 +34,17 @@ CAN.RFLM=ENABLE
 CAN.SJW=CAN_SJW_4TQ
 CAN.TTCM=DISABLE
 CAN.TXFP=ENABLE
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.Instance=DMA2_Channel1
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC2
+Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_eTaskGetState=0
 FREERTOS.INCLUDE_pcTaskGetTaskName=0
@@ -82,15 +102,16 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC2
 Mcu.IP1=CAN
-Mcu.IP2=FREERTOS
-Mcu.IP3=IWDG
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM4
-Mcu.IP8=TIM16
-Mcu.IP9=TIM17
-Mcu.IPNb=10
+Mcu.IP10=TIM17
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=IWDG
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM4
+Mcu.IP9=TIM16
+Mcu.IPNb=11
 Mcu.Name=STM32F302C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
@@ -131,8 +152,10 @@ Mcu.UserConstants=IWDG_WINDOW_DISABLE_VALUE,4095;IWDG_PRESCALER,4;IWDG_RESET_FRE
 Mcu.UserName=STM32F302CCTx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
+NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -203,6 +226,7 @@ PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=BRAKE_PRESS_BUFF
 PA6.Locked=true
+PA6.Mode=IN3-Single-Ended
 PA6.Signal=ADC2_IN3
 PA7.GPIOParameters=PinState,GPIO_Label
 PA7.GPIO_Label=STATUS_G
