Updated shared adc

--- a/boards/FSM/FSM.ioc
+++ b/boards/FSM/FSM.ioc
@@ -1,26 +1,26 @@
 #MicroXplorer Configuration settings - do not modify
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC2.Channel-18\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.Channel-19\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC2.Channel-23\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-25\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
 ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,Overrun,DMAContinuousRequests,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion,OffsetNumber-18\#ChannelRegularConversion,Offset-18\#ChannelRegularConversion,Rank-19\#ChannelRegularConversion,Channel-19\#ChannelRegularConversion,SamplingTime-19\#ChannelRegularConversion,OffsetNumber-19\#ChannelRegularConversion,Offset-19\#ChannelRegularConversion,SubFamily
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,Overrun,DMAContinuousRequests,ClockPrescaler,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,OffsetNumber-23\#ChannelRegularConversion,Offset-23\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,OffsetNumber-25\#ChannelRegularConversion,Offset-25\#ChannelRegularConversion
 ADC2.NbrOfConversion=3
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-1\#ChannelRegularConversion=0
-ADC2.Offset-18\#ChannelRegularConversion=0
-ADC2.Offset-19\#ChannelRegularConversion=0
+ADC2.Offset-23\#ChannelRegularConversion=0
+ADC2.Offset-25\#ChannelRegularConversion=0
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.OffsetNumber-18\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.OffsetNumber-19\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-23\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-25\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Overrun=ADC_OVR_DATA_PRESERVED
 ADC2.Rank-1\#ChannelRegularConversion=1
-ADC2.Rank-18\#ChannelRegularConversion=2
-ADC2.Rank-19\#ChannelRegularConversion=3
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SamplingTime-18\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SamplingTime-19\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SubFamily=STM32F302xC
+ADC2.Rank-23\#ChannelRegularConversion=2
+ADC2.Rank-25\#ChannelRegularConversion=3
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC2.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC2.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
 CAN.ABOM=ENABLE
 CAN.AWUM=DISABLE
 CAN.BS1=CAN_BS1_6TQ
@@ -152,7 +152,6 @@ Mcu.UserConstants=IWDG_WINDOW_DISABLE_VALUE,4095;IWDG_PRESCALER,4;IWDG_RESET_FRE
 Mcu.UserName=STM32F302CCTx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
-NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -312,7 +311,8 @@ ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
-RCC.ADC12outputFreq_Value=72000000
+RCC.ADC12PRES=RCC_ADC12PLLCLK_DIV2
+RCC.ADC12outputFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -329,7 +329,7 @@ RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12PRES,ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=72000000
