Add stm32 spi driver

--- a/boards/BMS/BMS.ioc
+++ b/boards/BMS/BMS.ioc
@@ -139,16 +139,17 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM3
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
 Mcu.IP2=CAN
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
 Mcu.IP5=IWDG
 Mcu.IP6=NVIC
 Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=TIM2
-Mcu.IPNb=11
+Mcu.IP8=SPI2
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32F302C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -299,10 +300,13 @@ PB11.Signal=GPIO_Output
 PB12.Locked=true
 PB12.Signal=SPI2_NSS
 PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=AIR_EN
@@ -420,6 +424,11 @@ SH.S_TIM2_CH2.0=TIM2_CH2,TriggerSource_TI2FP2
 SH.S_TIM2_CH2.1=TIM2_CH2,Input_Capture2_from_TI2
 SH.S_TIM2_CH2.2=TIM2_CH2,Input_Capture1_from_TI2
 SH.S_TIM2_CH2.ConfNb=3
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-Input_Capture1_from_TI2=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
