--- a/boards/BMS/BMS.ioc
+++ b/boards/BMS/BMS.ioc
@@ -297,8 +297,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=MCU_LATCH_RESET
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=SPI2_NSS
 PB12.Locked=true
-PB12.Signal=SPI2_NSS
+PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
