--- a/boards/FSM/FSM.ioc
+++ b/boards/FSM/FSM.ioc
@@ -3,7 +3,7 @@ ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC2.DMAContinuousRequests=ENABLE
 ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DMAContinuousRequests,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DMAContinuousRequests,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,SubFamily
 ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-0\#ChannelRegularConversion=0
@@ -14,6 +14,7 @@ ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.Rank-1\#ChannelRegularConversion=2
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SubFamily=STM32F302xC
 CAN.ABOM=ENABLE
 CAN.AWUM=DISABLE
 CAN.BS1=CAN_BS1_6TQ
@@ -95,17 +96,19 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC2
 Mcu.IP1=CAN
-Mcu.IP10=TIM16
-Mcu.IP11=TIM17
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=TIM16
+Mcu.IP13=TIM17
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=IWDG
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SYS
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=12
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
+Mcu.IPNb=14
 Mcu.Name=STM32F302C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
@@ -142,7 +145,7 @@ Mcu.Pin8=PA6
 Mcu.Pin9=PA7
 Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=IWDG_WINDOW_DISABLE_VALUE,4095;IWDG_PRESCALER,4;IWDG_RESET_FREQUENCY,5;LSI_FREQUENCY,40000;TASK1HZ_STACK_SIZE,512;TASK100HZ_STACK_SIZE,512;TASK1KHZ_STACK_SIZE,512;TASKCANRX_STACK_SIZE,512;TASKCANTX_STACK_SIZE,512;TIM4_AUTO_RELOAD_REG,0xFFFF;TIMx_FREQUENCY,72000000;TIM4_PWM_MINIMUM_FREQUENCY,1;TIM4_PRESCALER,(TIMx_FREQUENCY / TIM4_AUTO_RELOAD_REG / TIM4_PWM_MINIMUM_FREQUENCY);TIM16_AUTO_RELOAD_REG,0xFFFF;TIM17_AUTO_RELOAD_REG,0xFFFF;TIM16_PWM_MINIMUM_FREQUENCY,1;TIM17_PWM_MINIMUM_FREQUENCY,1;TIM16_PRESCALER,(TIMx_FREQUENCY / TIM16_AUTO_RELOAD_REG / TIM16_PWM_MINIMUM_FREQUENCY);TIM17_PRESCALER,(TIMx_FREQUENCY / TIM17_AUTO_RELOAD_REG / TIM17_PWM_MINIMUM_FREQUENCY);TIM3_PRESCALER,72;ADC_FREQUENCY,1000
+Mcu.UserConstants=IWDG_WINDOW_DISABLE_VALUE,4095;IWDG_PRESCALER,4;IWDG_RESET_FREQUENCY,5;LSI_FREQUENCY,40000;TASK1HZ_STACK_SIZE,512;TASK100HZ_STACK_SIZE,512;TASK1KHZ_STACK_SIZE,512;TASKCANRX_STACK_SIZE,512;TASKCANTX_STACK_SIZE,512;TIM4_AUTO_RELOAD_REG,0xFFFF;TIMx_FREQUENCY,72000000;TIM4_PWM_MINIMUM_FREQUENCY,1;TIM4_PRESCALER,(TIMx_FREQUENCY / TIM4_AUTO_RELOAD_REG / TIM4_PWM_MINIMUM_FREQUENCY);TIM16_AUTO_RELOAD_REG,0xFFFF;TIM17_AUTO_RELOAD_REG,0xFFFF;TIM16_PWM_MINIMUM_FREQUENCY,1;TIM17_PWM_MINIMUM_FREQUENCY,1;TIM16_PRESCALER,(TIMx_FREQUENCY / TIM16_AUTO_RELOAD_REG / TIM16_PWM_MINIMUM_FREQUENCY);TIM17_PRESCALER,(TIMx_FREQUENCY / TIM17_AUTO_RELOAD_REG / TIM17_PWM_MINIMUM_FREQUENCY);TIM3_PRESCALER,72;ADC_FREQUENCY,1000;TIM1_AUTO_RELOAD_REG,3599;TIM2_AUTO_RELOAD_REG,1799
 Mcu.UserName=STM32F302CCTx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
@@ -170,11 +173,11 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=SECONDARY_APPS_A
 PA0.Locked=true
-PA0.Signal=GPIO_Input
+PA0.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=SECONDARY_APPS_B
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=PRIMARY_APPS_Z
 PA10.Locked=true
@@ -230,11 +233,11 @@ PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=PRIMARY_APPS_A
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=PRIMARY_APPS_B
 PA9.Locked=true
-PA9.Signal=GPIO_Input
+PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=STATUS_B
 PB0.Locked=true
@@ -348,10 +351,22 @@ SH.S_TIM16_CH1.0=TIM16_CH1,Input_Capture1_from_TI1
 SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM17_CH1.0=TIM17_CH1,Input_Capture1_from_TI1
 SH.S_TIM17_CH1.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Input_Capture2_from_TI2
 SH.S_TIM4_CH2.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IPParameters=EncoderMode,Period,AutoReloadPreload
+TIM1.Period=TIM1_AUTO_RELOAD_REG
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Period,Prescaler
 TIM16.Period=TIM16_AUTO_RELOAD_REG
@@ -360,6 +375,10 @@ TIM17.Channel=TIM_CHANNEL_1
 TIM17.IPParameters=Channel,Prescaler,Period
 TIM17.Period=TIM17_AUTO_RELOAD_REG
 TIM17.Prescaler=TIM17_PRESCALER
+TIM2.CounterMode=TIM_COUNTERMODE_DOWN
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=CounterMode,EncoderMode,Period
+TIM2.Period=TIM2_AUTO_RELOAD_REG
 TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM3.Period=(TIMx_FREQUENCY / TIM3_PRESCALER / ADC_FREQUENCY) - 1
 TIM3.Prescaler=TIM3_PRESCALER - 1
