--- a/boards/BMS/BMS.ioc
+++ b/boards/BMS/BMS.ioc
@@ -297,16 +297,24 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=MCU_LATCH_RESET
 PB11.Locked=true
 PB11.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB12.GPIO_Label=SPI2_NSS
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB12.GPIO_PuPd=GPIO_NOPULL
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_PuPd
+PB14.GPIO_PuPd=GPIO_NOPULL
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_PuPd
+PB15.GPIO_PuPd=GPIO_NOPULL
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
@@ -426,9 +434,13 @@ SH.S_TIM2_CH2.0=TIM2_CH2,TriggerSource_TI2FP2
 SH.S_TIM2_CH2.1=TIM2_CH2,Input_Capture2_from_TI2
 SH.S_TIM2_CH2.2=TIM2_CH2,Input_Capture1_from_TI2
 SH.S_TIM2_CH2.ConfNb=3
-SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate=1.125 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPolarity,BaudRatePrescaler,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
